--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -173,12 +173,17 @@ jobs:
           curl -sSL $WIN_EXTRA | grep "0.0.0.0" | awk '{print $2}' > ./community/data/win-extra
           curl -sSL $WIN_EXTRA | grep "0.0.0.0" | awk '{print $2}' > win-extra.txt
 
-      - name: Create `chnroute`、`chnroute6` ipset file
+      - name: Create `chnroute`、`chnroute6` ipset file and `chnroute` ACL file
         run: |
           echo "create chnroute hash:net family inet" > chnroute.ipset
           curl -sSL $CHNROUTE | sed 's/^/add chnroute /' >> chnroute.ipset
           echo "create chnroute6 hash:net family inet6" > chnroute6.ipset
           curl -sSL $CHNROUTE6 | sed 's/^/add chnroute6 /' >> chnroute6.ipset
+          time=$(date "+%Y-%m-%d %H:%M:%S")
+          echo "# chnroutes" > chnroute.acl
+          echo "# Generated on ${time}" >> chnroute.acl
+          curl -sSL $CHNROUTE | sed 's/^/direct cidr /' >> chnroute.acl
+          curl -sSL $CHNROUTE6 | sed 's/^/direct cidr /' >> chnroute.acl
         # curl -sSL $CHNROUTE | grep CN | grep ipv6 | awk -F'|' '{printf("add chnroute6 %s/%d\n", $4, $5)}' >> chnroute6.ipset
         # curl -sSL $CHNROUTE | grep CN | grep ipv4 | awk -F'|' '{printf("add chnroute %s/%d\n", $4, 32-log($5)/log(2))}' >> chnroute.ipset
 
