--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -201,6 +201,7 @@ jobs:
           install -p {proxy,direct,reject}-list.txt ./publish/
           install -p {apple-cn,google-cn,gfw,greatfire,win-spy,win-update,win-extra}.txt ./publish/
           install -p {chnroute,chnroute6}.ipset ./publish/
+          install -p chnroute.acl ./publish/
           cd ./publish || exit 1
           zip rules.zip {proxy,direct,reject}-list.txt geoip.dat geosite.dat
           sha256sum geosite.dat > geosite.dat.sha256sum
